[SELC-4733] Feat: Refactor test for connector rest module (#455)